force-app/main/default/objects/AI_Prompt_Element__c/AI_Prompt_Element__c.object-meta.xml
<CustomObject>
    <label>Prompt Element</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Prompt Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>