force-app/main/default/objects/AI_Prompt_Element__c/fields/AI_Parent_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Parent_Prompt__c</fullName>
    <description>The Parent prompt for this element</description>
    <label>Parent Prompt</label>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Prompt Elements</relationshipLabel>
    <relationshipName>AI_Prompt_Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>