force-app/main/default/objects/AI_Prompt_Element__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prompt</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Prompt__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Canvas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Prompt Elements (Prompt)</relationshipLabel>
    <relationshipName>AI_Child_Prompt_Elements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>