force-app/main/default/objects/AI_Prompt_Element__c/fields/AI_Summary_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Summary Prompt</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Prompt__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Canvas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Prompt Elements (Summary Prompt)</relationshipLabel>
    <relationshipName>Summary_Prompt_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>