force-app/main/default/objects/AI_Prompt_Element__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height (In Pixels)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>