force-app/main/default/objects/AI_Prompt_Element__c/fields/Inherit_Prompt_Security__c.field-meta.xml
<CustomField>
    <fullName>Inherit_Prompt_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inherit Prompt Security</label>
    <type>Checkbox</type>
</CustomField>